<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_weight="1"
    android:layout_gravity="fill"
    android:rowCount="4"
    android:columnCount="2">

    <TextView
        android:id="@+id/look_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:text="@string/look_at"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button"
        android:layout_height="wrap_content"

        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/click" />


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:text="@string/checkBox" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        app:srcCompat="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/switch_on_off" />
    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_columnSpan="2"
        android:hint="@string/text_here" />


</GridLayout>
