<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/look_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/look_at"
        android:textSize="30dp" />


    <Button
        android:id="@+id/button"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/look_at"

        android:layout_marginTop="0dp"
        android:text="@string/click" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/look_at"
        android:layout_marginTop="0dp"
        android:layout_toRightOf="@+id/button"
        android:text="@string/checkBox" />

    <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button"
            app:srcCompat="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText"
        android:layout_marginBottom="94dp"
        android:layout_toRightOf="@+id/imageButton2"
        android:gravity="center"
        android:text="@string/switch_on_off" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton2"
        android:hint="@string/text_here" />


    </RelativeLayout>
