<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:rowCount="2"
    android:orientation="horizontal">

    <ListView
        android:id="@+id/listView"
        android:layout_columnSpan="3"
        android:layout_width="match_parent"
        android:layout_height="680dp"
        />

    <Button
        android:id="@+id/sentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendButtonText"
        />
    <EditText
        android:id="@+id/typeHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/typeHere"
        android:textSize="20dp"
        android:layout_columnWeight="1"/>

    <Button
        android:id="@+id/receiveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receiveButtonText" />






</GridLayout>

